Finish C level in tut 1

--- a/tut1_reachability_CandA.ipynb
+++ b/tut1_reachability_CandA.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 1,
       "metadata": {
         "id": "siiK-4ShRMc5"
       },
@@ -15,6 +15,26 @@
             "\n",
             "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
             "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/alfonso/Git_workspace/DD2415-Safe-Robot-Planning-and-Control/venv/lib/python3.12/site-packages/pypolycontain/operations.py:23: UserWarning: You don't have pydrake installed properly. Methods that rely on optimization may fail.\n",
+            "  warnings.warn(\"You don't have pydrake installed properly. Methods that rely on optimization may fail.\")\n",
+            "/home/alfonso/Git_workspace/DD2415-Safe-Robot-Planning-and-Control/venv/lib/python3.12/site-packages/pypolycontain/conversions.py:19: UserWarning: WARNING: You don't have CDD package installed. Unable to visualize polytopes. You may still visualize zonotopes.\n",
+            "  warnings.warn(\"WARNING: You don't have CDD package installed. Unable to visualize polytopes. You may still visualize zonotopes.\")\n",
+            "/home/alfonso/Git_workspace/DD2415-Safe-Robot-Planning-and-Control/venv/lib/python3.12/site-packages/pypolycontain/conversions.py:32: UserWarning: You don't have pydrake installed properly. Methods that rely on optimization may fail.\n",
+            "  warnings.warn(\"You don't have pydrake installed properly. Methods that rely on optimization may fail.\")\n",
+            "/home/alfonso/Git_workspace/DD2415-Safe-Robot-Planning-and-Control/venv/lib/python3.12/site-packages/pypolycontain/conversions.py:38: UserWarning: You don't have pydrake with SCS solver.\n",
+            "  warnings.warn(\"You don't have pydrake with SCS solver.\")\n",
+            "/home/alfonso/Git_workspace/DD2415-Safe-Robot-Planning-and-Control/venv/lib/python3.12/site-packages/pypolycontain/containment.py:16: UserWarning: You don't have CDD package installed. Unable to run cone ray generation.\n",
+            "  warnings.warn(\"You don't have CDD package installed. Unable to run cone ray generation.\")\n",
+            "/home/alfonso/Git_workspace/DD2415-Safe-Robot-Planning-and-Control/venv/lib/python3.12/site-packages/pypolycontain/containment.py:38: UserWarning: You don't have pydrake installed properly. Methods that rely on optimization may fail.\n",
+            "  warnings.warn(\"You don't have pydrake installed properly. Methods that rely on optimization may fail.\")\n",
+            "/home/alfonso/Git_workspace/DD2415-Safe-Robot-Planning-and-Control/venv/lib/python3.12/site-packages/pypolycontain/projection.py:34: UserWarning: You don't have pydrake installed properly. Methods that rely on optimization may fail.\n",
+            "  warnings.warn(\"You don't have pydrake installed properly. Methods that rely on optimization may fail.\")\n"
           ]
         }
       ],
@@ -87,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 2,
       "metadata": {
         "id": "zLoErGhw7_BN"
       },
@@ -196,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 3,
       "metadata": {
         "id": "KdXnp99EPoqj"
       },
@@ -280,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 4,
       "metadata": {
         "id": "xjvkQXjU_zxC"
       },
@@ -352,7 +372,7 @@
         "\n",
         "$ x_0^T P x_0 - x_0^T P x_0 + \\int_0^{\\infty} (x(t)^T Q x(t) + u(t)^T R u(t))dt$\n",
         "\n",
-        "for which we can take $-x_0^T P x_0$ into the integral sign. Notice that $\\frac{d}{dt}(x^T P x) = \\dot{x}^T P x + x^T P \\dot{x}$ and $\\dot{x}$ is something we already know! We get terms that depend on $u$, terms that depend on $x$, and terms that depend on both. The optimization of this unconstrained problem is significantly easier under the assumption that the control input is applied according to $u = -R^{-1}B^TPx$. If you work out the math yourself, it will lead to a cost term where the only thing we can influence is the term $\\int_0^{\\infty} x^T (A^TP + PA + Q - PBR^{-1}B^TP)x for which the term between the state $x^T$ and $x$ is the ARE.\n",
+        "for which we can take $-x_0^T P x_0$ into the integral sign. Notice that $\\frac{d}{dt}(x^T P x) = \\dot{x}^T P x + x^T P \\dot{x}$ and $\\dot{x}$ is something we already know! We get terms that depend on $u$, terms that depend on $x$, and terms that depend on both. The optimization of this unconstrained problem is significantly easier under the assumption that the control input is applied according to $u = -R^{-1}B^TPx$. If you work out the math yourself, it will lead to a cost term where the only thing we can influence is the term $\\int_0^{\\infty} x^T (A^TP + PA + Q - PBR^{-1}B^TP)x$ for which the term between the state $x^T$ and $x$ is the ARE.\n",
         "\n",
         "LQR is a valuable control tool as\n",
         "- It considers an optimal trade-off between user specified system requirements\n",
@@ -365,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 21,
       "metadata": {
         "id": "_A6hZXSshBOk"
       },
@@ -387,18 +407,19 @@
         "B = np.array([[1,0],[0,1]])\n",
         "Q = np.diag([120,55])\n",
         "R = np.diag([5,5])\n",
-        "N = np.array([[9, 10], [11, 12]])\n",
         "P = solve_continuous_are(A, B, Q, R)\n",
-        "K = np.linalg.inv(R) @ (B.T @ P + N.T)\n",
+        "K = np.linalg.inv(R) @ B.T @ P # N^T = 0\n",
         "\n",
-        "Ac = A - B @ K # closed-loop system\n",
+        "# closed-loop system\n",
+        "# ẋ(t) = Ax(t) + Bu(t), u(t) = -Kx(t)\n",
+        "# ẋ(t) = (A - BK)x(t)\n",
+        "Ac = A - B @ K\n",
         "\n",
         "mu = 0.1\n",
         "c0 = np.array([10,1])\n",
         "g0 = np.array([[0.3,0],[0,0.3]])\n",
         "\n",
         "zts_rob = pp.zonotope(x=c0, G=g0)\n",
-        "\n",
         "fig, ax = plt.subplots()\n",
         "try:\n",
         "    pp.visualize(np.append(zts_obj,zts_rob), fig=fig, ax=ax)\n",
@@ -418,7 +439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 12,
       "metadata": {
         "id": "nobwlnoPskyt"
       },
@@ -859,7 +880,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "execution_count": 88,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -912,66 +933,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 28,
       "metadata": {
         "id": "nAvuZKdP1q3b"
       },
       "outputs": [
         {
-          "ename": "ValueError",
-          "evalue": "too many values to unpack (expected 2)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[89], line 40\u001b[0m\n\u001b[1;32m     37\u001b[0m   \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo collision detected.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 40\u001b[0m \u001b[43msimple_collision_check\u001b[49m\u001b[43m(\u001b[49m\u001b[43mzts_obj\u001b[49m\u001b[43m,\u001b[49m\u001b[43mzts_rob\u001b[49m\u001b[43m)\u001b[49m\n",
-            "Cell \u001b[0;32mIn[89], line 5\u001b[0m, in \u001b[0;36msimple_collision_check\u001b[0;34m(zts_obj, zts_rob)\u001b[0m\n\u001b[1;32m      2\u001b[0m collision \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Extract the center and generators for the object and robot\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m c_obj, g_obj \u001b[38;5;241m=\u001b[39m zts_obj\n\u001b[1;32m      6\u001b[0m c_rob, g_rob \u001b[38;5;241m=\u001b[39m zts_rob\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Calculate the width and height of the rectangles\u001b[39;00m\n",
-            "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "No collision detected!\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "def simple_collision_check(zts_obj,zts_rob):\n",
         "  collision = False\n",
         "\n",
-        "  # Extract the center and generators for the object and robot\n",
-        "  c_obj, g_obj = zts_obj\n",
-        "  c_rob, g_rob = zts_rob\n",
+        "  # Rob\n",
+        "  rob_top = zts_rob.G[1,0] + zts_rob.x[1]\n",
+        "  rob_bottom = zts_rob.x[1] - zts_rob.G[1,0]\n",
+        "  rob_left = zts_rob.x[0] - zts_rob.G[0,0]\n",
+        "  rob_right = zts_rob.x[0] + zts_rob.G[0,0]\n",
         "\n",
-        "  # Calculate the width and height of the rectangles\n",
-        "  width_obj = 2 * np.linalg.norm(g_obj[0])\n",
-        "  height_obj = 2 * np.linalg.norm(g_obj[1])\n",
-        "  width_rob = 2 * np.linalg.norm(g_rob[0])\n",
-        "  height_rob = 2 * np.linalg.norm(g_rob[1])\n",
-        "\n",
-        "  # Calculate the half-widths and half-heights\n",
-        "  half_width_obj = width_obj / 2\n",
-        "  half_height_obj = height_obj / 2\n",
-        "  half_width_rob = width_rob / 2\n",
-        "  half_height_rob = height_rob / 2\n",
-        "\n",
-        "  # Calculate the edges of the rectangles\n",
-        "  left_obj = c_obj[0] - half_width_obj\n",
-        "  right_obj = c_obj[0] + half_width_obj\n",
-        "  bottom_obj = c_obj[1] - half_height_obj\n",
-        "  top_obj = c_obj[1] + half_height_obj\n",
-        "\n",
-        "  left_rob = c_rob[0] - half_width_rob\n",
-        "  right_rob = c_rob[0] + half_width_rob\n",
-        "  bottom_rob = c_rob[1] - half_height_rob\n",
-        "  top_rob = c_rob[1] + half_height_rob\n",
-        "\n",
-        "  # Check for overlap\n",
-        "  collision = not (left_obj > right_rob or right_obj < left_rob or\n",
-        "                    bottom_obj > top_rob or top_obj < bottom_rob)\n",
+        "  # Loop through all objects\n",
+        "  for obj in zts_obj:\n",
+        "    obj_top = obj.G[1,0] + obj.x[1]\n",
+        "    obj_bottom = obj.x[1] - obj.G[1,0]\n",
+        "    obj_left = obj.x[0] - obj.G[0,0]\n",
+        "    obj_right = obj.x[0] + obj.G[0,0]\n",
+        "    if (rob_top > obj_bottom and rob_bottom < obj_top and rob_left < obj_right and rob_right > obj_left):\n",
+        "      collision = True\n",
+        "      break\n",
         "\n",
         "  if collision:\n",
         "    print(\"Collision detected!\")\n",
         "  else:\n",
-        "    print(\"No collision detected.\")\n",
+        "    print(\"No collision detected!\")\n",
+        "  \n",
+        "  return collision\n",
         "\n",
-        "simple_collision_check(zts_obj,zts_rob)\n",
-        "\n"
+        "simple_collision_check(zts_obj,zts_rob)"
       ]
     },
     {
@@ -989,34 +1001,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 35,
       "metadata": {
         "id": "si6Tawxd1uqn"
       },
       "outputs": [
         {
-          "ename": "AttributeError",
-          "evalue": "module 'pypolycontain' has no attribute 'zonotope_vertices'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[32], line 15\u001b[0m\n\u001b[1;32m      9\u001b[0m       \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#     # 1: get the vertices from the zonotope\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#     # 2: convert the vertices into a shapely Polygon\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# print whether a collision occured or not\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[43mpolygon_collision_check\u001b[49m\u001b[43m(\u001b[49m\u001b[43mzts_obj\u001b[49m\u001b[43m,\u001b[49m\u001b[43mzts_rob\u001b[49m\u001b[43m)\u001b[49m\n",
-            "Cell \u001b[0;32mIn[32], line 4\u001b[0m, in \u001b[0;36mpolygon_collision_check\u001b[0;34m(zts_obj, zts_rob)\u001b[0m\n\u001b[1;32m      2\u001b[0m collision \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m zt_obj \u001b[38;5;129;01min\u001b[39;00m zts_obj:\n\u001b[0;32m----> 4\u001b[0m   poly_obj \u001b[38;5;241m=\u001b[39m Polygon(\u001b[43mpp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzonotope_vertices\u001b[49m(zt_obj))\n\u001b[1;32m      5\u001b[0m   poly_rob \u001b[38;5;241m=\u001b[39m Polygon(pp\u001b[38;5;241m.\u001b[39mzonotope_vertices(zts_rob))\n\u001b[1;32m      6\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m poly_obj\u001b[38;5;241m.\u001b[39mintersects(poly_rob):\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'pypolycontain' has no attribute 'zonotope_vertices'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "No collision detected!\n"
           ]
         }
       ],
       "source": [
+        "import itertools\n",
+        "def get_vertices(zonotope):\n",
+        "  center = np.array(zonotope.x)\n",
+        "  generators = np.array(zonotope.G)\n",
+        "  \n",
+        "  # Number of generators\n",
+        "  num_generators = generators.shape[1]\n",
+        "  \n",
+        "  # Generate all possible combinations of -1 and 1 for the generators\n",
+        "  combinations = list(itertools.product([-1, 1], repeat=num_generators))\n",
+        "  \n",
+        "  # Compute the vertices\n",
+        "  vertices = []\n",
+        "  for combination in combinations:\n",
+        "    vertex = center + np.dot(generators, combination)\n",
+        "    vertices.append(vertex)\n",
+        "\n",
+        "  return np.array(vertices)\n",
+        "\n",
         "def polygon_collision_check(zts_obj,zts_rob):\n",
         "  collision = False\n",
         "  for zt_obj in zts_obj:\n",
-        "    poly_obj = Polygon(pp.zonotope_vertices(zt_obj))\n",
-        "    poly_rob = Polygon(pp.zonotope_vertices(zts_rob))\n",
+        "    poly_obj = Polygon(get_vertices(zt_obj))\n",
+        "    poly_rob = Polygon(get_vertices(zts_rob))\n",
         "    if poly_obj.intersects(poly_rob):\n",
         "      collision = True\n",
         "      print(\"Collision detected!\")\n",
         "      break\n",
+        "  if not collision:\n",
+        "    print(\"No collision detected!\")\n",
         "\n",
         "#     # 1: get the vertices from the zonotope\n",
         "#     # 2: convert the vertices into a shapely Polygon\n",
